# dask_demos

./: .gitignore  Makefile  README.md  environment.lock.yml  environment.yml  requirements-dev.txt  requirements-pinned.txt  requirements.txt  setup.cfg
nesi/: template_wrapper.bash
notebooks/: dask_basics.html  dask_basics.ipynb  dask_for_xarray.ipynb  hyperparameters_search.ipynb  hyperparameters_search_advanced.ipynb  hyperparameters_search_basic.html  hyperparameters_search_basic.ipynb  hyperparameters_search_nzrse.html  hyperparameters_search_nzrse.ipynb  torch_models.py
scripts/: hyperparameters_search.py  hyperparameters_search.sl  hyperparameters_search_mpi.py  hyperparameters_search_mpi.sl  hyperparameters_search_slurm.py  hyperparameters_search_slurm.sl
src/: hyperparameters_search_advanced.py  hyperparameters_search_basic.py  hyperparameters_search_nzrse.py  kernel_wrapper.bash  torch_models.py
