[metadata]
name = hpc_for_datascience_demos
version = 0.1.0
description = Demos of Data Science tasks running on HPC
url = https://github.com/nesi/hpc_for_datascience_demos
author = Maxime RIO
author_email = maxime.rio@nesi.org.nz

[options]
packages = find:
install_requires =
    numpy
    scipy
    scikit-learn
    matplotlib
    joblib
    dask[complete]
    dask-jobqueue
    torch
    skorch
    dask-ml

[options.packages.find]
include =
    src

[options.extras_require]
dev =
    black
    flake8
    ipykernel
    jupytext
    nbconvert

[flake8]
max-line-length = 88
