[metadata]
name = hpc_for_datascience_demos
version = 0.2.0
description = Demos of Data Science tasks running on HPC
url = https://github.com/nesi/hpc_for_datascience_demos
author = Maxime RIO
author_email = maxime.rio@nesi.org.nz

[options]
packages = find:
package_dir =
    =src
install_requires =
    numpy
    scipy
    scikit-learn
    matplotlib
    joblib
    dask[complete]==2.22.0
    dask-jobqueue==0.7.1
    torch==1.7.1+cu110
    skorch==0.9.0
    dask-ml==1.7.0
    graphviz

[options.packages.find]
include =
    src

[options.extras_require]
dev =
    black
    flake8
    ipykernel
    jupytext
    nbconvert

[flake8]
max-line-length = 88
